--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^2.13.0",
+    "html2canvas": "^1.0.0-rc.5",
     "js-base64": "^2.4.9",
     "vue": "^2.6.1",
     "vue-router": "^3.0.1",
